--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-express": "^8.4.7",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/multer": "^1.4.7",
     "@types/passport-local": "^1.0.34",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "fs": "0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
